--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
         <!-- Navbar -->
         <nav class="navbar bg-amber-50 shadow-md py-5 px-6 sm:px-28 flex flex-col sm:flex-row justify-between items-center space-y-4 sm:space-y-0 sm:space-x-4">
             <div class="flex-none">
-                <button class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold">Home</button>
+                <button id="home" class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold">Home</button>
             </div>
 
             <div class="flex flex-col sm:flex-row flex-1 justify-center items-center sm:space-x-3">
@@ -93,20 +93,27 @@
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                   <input type="radio" name="my-accordion-4" />
-                  <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                  <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM,and why it is useful?</div>
                   <div class="collapse-content">
-                    <p>hello</p>
+                    <p>Event delegation is a technique in JavaScript where you attach a single event listener to a parent element to manage events for multiple child elements, rather than attaching event listeners to each individual child. This is especially useful in scenarios where child elements are dynamically added or removed from the DOM.  <br> <br> Event delegation is useful because it improves performance by reducing the number of event listeners needed in the DOM. Instead of attaching a listener to each child element, you attach one to a common parent. This also simplifies handling dynamically added elements, as the single parent listener will automatically capture events from new children, making the code more efficient and easier to maintain.</p>
                   </div>
                 </div>
                 <div class="collapse collapse-arrow join-item border-base-300 border">
                     <input type="radio" name="my-accordion-4" />
-                    <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                    <div class="collapse-title text-xl font-medium">How do you manipulate an elements attributes and styles using the DOM?</div>
                     <div class="collapse-content">
-                      <p>hello</p>
+                      <p>
+                        You can manipulate an element's attributes and styles using the DOM by leveraging built-in methods and properties in JavaScript. To modify attributes, you can use methods like setAttribute() to add or change an attribute, getAttribute() to retrieve its value, and removeAttribute() to remove it. For styling, the style property allows direct manipulation of inline CSS, such as setting element.style.backgroundColor or other styles dynamically. You can also control CSS classes using classList methods, such as add(), remove(), and toggle(), making it easier to apply or modify styles through CSS classes.</p>
                     </div>
                   </div>
               </div>
     
         </section>
+        <script>
+            document.getElementById('home').addEventListener('click',function(){
+        
+        window.location.href = 'index.html';
+    })
+        </script>
 </body>
 </html>
