--- a/index.html
+++ b/index.html
@@ -49,17 +49,16 @@
         }
 
         .hidden {
-    display: none;
-}
+            display: none;
+        }
 
+        #btn-donation:hover,
+        #btn-history:hover {
+            background-color: #b4f461 !important; /* Maintaining the green color during hover */
+        }
 
-#btn-donation:hover,
-#btn-history:hover {
-    background-color: #b4f461 !important; /* Maintaining the green color during hover */
-}
-
-      /* Active button styles */
-      #btn-donation.active,
+        /* Active button styles */
+        #btn-donation.active,
         #btn-history.active {
             background-color: rgb(180, 244, 97) !important; /* Green for active */
         }
@@ -68,16 +67,16 @@
         #btn-history.inactive {
             background-color: gainsboro !important; /* Gray for inactive */
         }
-</style>
+    </style>
 </head>
 
 <body class="lexend">
 
     <header id="navbar" class="sticky top-0 bg-opacity-80 z-10">
         <!-- Navbar -->
-        <nav class="navbar bg-amber-50 shadow-md py-5 px-6 sm:px-28 flex flex-col sm:flex-row justify-between items-center space-y-4 sm:space-y-0 sm:space-x-4">
+        <nav class="navbar bg-amber-50 shadow-md py-3 px-4 sm:px-28 flex flex-col sm:flex-row justify-between items-center space-y-2 sm:space-y-0">
             <div class="flex-none">
-                <button id="blog" class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold">Blog</button>
+                <button id="blog" class="btn bg-[#B4F461] px-4 sm:px-8 text-lg sm:text-xl font-bold">Blog</button>
             </div>
 
             <div class="flex flex-col sm:flex-row flex-1 justify-center items-center sm:space-x-3">
@@ -93,9 +92,9 @@
             </div>
         </nav>
 
-        <div class="flex justify-center mt-5 space-x-4">
-            <button id="btn-donation" class="btn active bg-[#B4F461] active-btn px-6 sm:px-8 text-lg sm:text-xl text-black  font-bold">Donation</button>
-            <button id="btn-history" class="btn inactive bg-[#B4F461] px-6 sm:px-8 text-lg sm:text-xl text-black font-bold">History</button>
+        <div class="flex justify-center mt-5 space-x-2 sm:space-x-4">
+            <button id="btn-donation" class="btn active bg-[#B4F461] active-btn px-4 sm:px-6 text-base sm:text-lg font-bold">Donation</button>
+            <button id="btn-history" class="btn inactive bg-[#B4F461] px-4 sm:px-6 text-base sm:text-lg font-bold">History</button>
         </div>
     </header>
 
@@ -103,7 +102,7 @@
         <!-- Donation Cards -->
         <section class="mt-8">
             <!-- Card 1 for Noakali -->
-            <div class="card card-side bg-base-100 border w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center">
+            <div class="card card-side bg-base-100 border w-full sm:w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center">
                 <img class="w-full sm:w-1/2 md:w-[330px] h-auto ml-4 mb-4 md:mb-0" src="assets/noakhali.png" alt="">
                 <div class="card-body">
                     <div class="flex items-center space-x-2 bg-gray-100 p-2 rounded-lg shadow-sm w-28">
@@ -114,13 +113,13 @@
                     <p class="text-sm font-normal text-[#111111B3] leading-normal">
                         The coastal district of Noakhali has recently been devastated by severe flooding, leaving thousands of families displaced and in urgent need of support.
                     </p>
-                    <input type="number" name="donation-amount" id="donation-amount" class="input input-bordered w-full pl-4 pr-12 sm:text-sm" placeholder="Write Donation Amount" min="0">
-                    <button id="btn-donation-noakali" class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold w-1/3 m-auto ">Donate Now</button>
+                    <input type="number" name="donation-amount" id="donation-amount" class="input input-bordered w-full pl-2 pr-6 sm:pl-4 sm:pr-12 text-sm sm:text-base" placeholder="Write Donation Amount" min="0">
+                    <button id="btn-donation-noakali" class="btn bg-[#B4F461] px-4 sm:px-8 text-lg sm:text-xl font-bold w-1/3 m-auto ">Donate Now</button>
                 </div>
             </div>
 
-            <!-- Card 2 for feni -->
-            <div class="card card-side bg-base-100 border w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center mt-8">
+            <!-- Card 2 for Feni -->
+            <div class="card card-side bg-base-100 border w-full sm:w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center mt-8">
                 <img class="w-full sm:w-1/2 md:w-[330px] h-auto ml-4 mb-4 md:mb-0" src="assets/feni.png" alt="">
                 <div class="card-body">
                     <div class="flex items-center space-x-2 bg-gray-100 p-2 rounded-lg shadow-sm w-28">
@@ -131,13 +130,13 @@
                     <p class="text-sm font-normal text-[#111111B3] leading-normal">
                         In light of the recent devastating floods in Feni, Bangladesh, we urge you to extend your support to those affected by this natural disaster.
                     </p>
-                    <input type="number" name="donation-amount" id="feni-donation-amount" class="input input-bordered w-full pl-4 pr-12 sm:text-sm" placeholder="Write Donation Amount" min="0">
-                    <button id="donate-btn-feni" class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold w-1/3 m-auto">Donate Now</button>
+                    <input type="number" name="donation-amount" id="feni-donation-amount" class="input input-bordered w-full pl-2 pr-6 sm:pl-4 sm:pr-12 text-sm sm:text-base" placeholder="Write Donation Amount" min="0">
+                    <button id="donate-btn-feni" class="btn bg-[#B4F461] px-4 sm:px-8 text-lg sm:text-xl font-bold w-1/3 m-auto">Donate Now</button>
                 </div>
             </div>
 
-            <!-- Card 3 quota -->
-            <div class="card card-side bg-base-100 border w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center mt-8">
+            <!-- Card 3 for Quota -->
+            <div class="card card-side bg-base-100 border w-full sm:w-auto h-auto mx-4 sm:mx-12 lg:mx-24 flex flex-col md:flex-row items-center mt-8">
                 <img class="w-full sm:w-1/2 md:w-[335px] h-auto ml-4 mb-4 md:mb-0" src="assets/quota-protest.png" alt="">
                 <div class="card-body">
                     <div class="flex items-center space-x-2 bg-gray-100 p-2 rounded-lg shadow-sm w-28">
@@ -148,12 +147,12 @@
                     <p class="text-sm font-normal text-[#111111B3] leading-normal">
                         The Quota Movement has sparked significant unrest, resulting in numerous injuries among peaceful protestors.
                     </p>
-                    <input type="number" name="donation-amount" id="quota-donation-amount" class="input input-bordered w-full pl-4 pr-12 sm:text-sm" placeholder="Write Donation Amount" min="0">
-                    <button id="quota-donate-btn" class="btn bg-[#B4F461] px-8 text-lg sm:text-xl font-bold w-full">Donate Now</button>
+                    <input type="number" name="donation-amount" id="quota-donation-amount" class="input input-bordered w-full pl-2 pr-6 sm:pl-4 sm:pr-12 text-sm sm:text-base" placeholder="Write Donation Amount" min="0">
+                    <button id="quota-donate-btn" class="btn bg-[#B4F461] px-4 sm:px-8 text-lg sm:text-xl font-bold w-1/3 m-auto">Donate Now</button>
                 </div>
             </div>
         </section>
-    </main> 
+    </main>
 
     <!-- Modal HTML-->
 <div id="donation-modal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
